# zipline-reloaded

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CI_FIXES_APPLIED.md  CI_FIXES_SUMMARY.md  Dockerfile  GETTING_STARTED.md  INSTALLATION.md  README.md  README_DOCKER.md  WINDOWS_FILE_LOCKING_FIX.md  ZIPLINE_MODERNIZATION_REPORT.md  api-reference.html  beginner-tutorial.html  bundles.html  development-guidelines.html  docker-compose.yml  genindex.html  index.html  install.html  objects.inv  pyproject.toml  release-process.html  releases.html  requirements-build.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  risk-and-perf-metrics.html  search.html  searchindex.js  setup.cfg  setup.py  setup_sharadar_branch.sh  tox.ini  trading-calendars.html  zack
.claude/tasks/: fix_tox_failures.md  fix_tox_progress.md
.codex/: AGENTS.md
.devcontainer/: requirements.txt
.github/workflows/: build_wheels.yml  ci_tests.yml  ci_tests_full.yml  ci_tests_quick.yml  conda_exchange_calendar.yml  conda_package.yml  conda_talib.yml  unit_tests.yml
_modules/: index.html
_modules/zipline/: protocol.html
_static/: documentation_options.js
conda/ta-lib/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
conda/zipline-reloaded/: conda_build_config.yaml  meta.yaml  run_test.bat  run_test.sh
docs/: BUNDLES.md  CUSTOM_DATA.md  CUSTOM_DATA_DATABASE.md  DOCKER_BUNDLES.md  SHARADAR_GUIDE.md  WIKI_DATASET_NOTICE.md
examples/: custom_data_database_example.py  custom_data_example.py
exchange_calendars/: _version.py  calendar_utils.py  exchange_calendar.py
notebooks/: 00_quick_links.ipynb  01_customdata_quickstart.ipynb  02_database_storage.ipynb  03_market_data_example.ipynb  04_nasdaq_datalink_example.ipynb  05_backtesting_with_bundles.ipynb  06_sharadar_professional_backtesting.ipynb  07_pipeline_research.ipynb  08_run_external_strategy.ipynb  NAVIGATION.md  README.md  STRATEGIES.md  TERMINAL_GUIDE.md  analyze_backtest_results.ipynb  check_data_range.py  strategies
notebooks/strategies_files/: README.md  __init__.py  ema_crossover.py
scripts/: check_bundle_dates.py  inspect_bundle.py  manage_data.py  manage_sharadar.py  setup_extension.py  setup_terminal.sh  test_terminal.sh
src/zipline/: __main__.py  _protocol.cp310-win_amd64.pyd  _protocol.pyx  _version.py  algorithm.py  currency.py  errors.py  extensions.py
strategies/: sma_crossover.py
tests/: conftest.py  test_algorithm.py  test_api_shim.py  test_assets.py  test_bar_data.py  test_benchmark.py  test_blotter.py  test_clock.py  test_cmdline.py  test_continuous_futures.py  test_data_portal.py  test_examples.py  test_fetcher.py  test_finance.py  test_history.py  test_interface_compat.py  test_labelarray.py  test_memoize.py  test_registration_manager.py  test_restrictions.py  test_security_list.py  test_testing.py  test_tradesimulation.py
tests/data/: test_adjustments.py  test_daily_bars.py  test_fx.py  test_minute_bars.py  test_resample.py
tests/events/: test_events.py  test_events_nyse.py
tests/finance/: test_cancel_policy.py  test_commissions.py  test_risk.py  test_slippage.py
tests/metrics/: test_core.py  test_metrics.py
tests/pipeline/: base.py  test_adjusted_array.py  test_adjustment.py  test_classifier.py  test_column.py  test_computable_term.py  test_custom_data.py  test_custom_db.py  test_dataset.py  test_domain.py  test_downsampling.py  test_dtypes.py  test_engine.py  test_events.py  test_factor.py  test_filter.py  test_frameload.py  test_hooks.py  test_international_markets.py  test_multidimensional_dataset.py  test_numerical_expression.py  test_pipeline.py  test_pipeline_algo.py  test_quarters_estimates.py  test_slice.py  test_statistical.py  test_technical.py  test_term.py  test_us_equity_pricing_loader.py
tests/utils/: test_argcheck.py  test_cache.py  test_date_utils.py  test_final.py  test_math_utils.py  test_metautils.py  test_numpy_utils.py  test_pandas_utils.py  test_preprocess.py  test_sentinel.py  test_sharedoc.py
zipline/: test_algorithms.py
zipline/data/: adjustments.py  dispatch_bar_reader.py
zipline/finance/: ledger.py  (+1 more)
(+174 files in other folders)
